# pythoncourse

./: music.db  pyproject.toml
examples/: sql_to_pandas_example.py
examples/debugging_example/: analysis.py  cleaning.py  config.py  data_loader.py  main.py  reporting.py
examples/debugging_example/data/: steps.csv
examples/portfolio-analytics/: pyproject.toml
examples/portfolio-analytics/tests/: test_datafetch.py  test_metrics.py  test_optimize.py
examples/pytest/: my_app.py  test_autouse.py  test_my_app.py
examples/pytest/mocking/: database.py  email_client.py  test_email_client.py
examples/pytest/monkeypatching/: test_weather.py  weather.py
tutorials/: tutorial11_notebook.ipynb  tutorial3_notebook.ipynb  tutorial3_notebook_solution.ipynb  tutorial4_notebook.ipynb  tutorial4_notebook_solution.ipynb  tutorial5_notebook_solution.ipynb  tutorial7.sql  tutorial7_solution.sql  tutorial9_notebook_solution.ipynb
